Update all locales with the latest Transifex translations

--- a/config/locales/de_DE.yml
+++ b/config/locales/de_DE.yml
@@ -1497,12 +1497,12 @@ de_DE:
   email_signature: "%{sitename} Team"
   email_confirm_customer_greeting: "Hallo %{name},"
   email_confirm_customer_intro_html: "Vielen Dank für ihren Einkauf bei <strong> %{distributor} </strong>!"
-  email_confirm_customer_number_html: "Bestellbestätigung <strong> # %{number} </ strong>"
-  email_confirm_customer_details_html: "Hier sind Ihre Bestelldetails von <strong> %{distributor} </ strong>:"
+  email_confirm_customer_number_html: "<strong>Bestellbestätigung # %{number}</strong>"
+  email_confirm_customer_details_html: "Hier sind Ihre <strong>Bestelldaten</strong> von <strong>%{distributor}</strong> :"
   email_confirm_customer_signoff: "Mit freundlichen Grüßen,"
   email_confirm_shop_greeting: "Hallo %{name},"
   email_confirm_shop_order_html: "Gut gemacht! Sie haben eine neue Bestellung für <strong> %{distributor} </ strong>!"
-  email_confirm_shop_number_html: "Bestellbestätigung <strong> # %{number} </ strong>"
+  email_confirm_shop_number_html: "<strong>Bestellbestätigung # %{number}</strong>"
   email_order_summary_item: "Artikel"
   email_order_summary_quantity: "Menge"
   email_order_summary_sku: "Artikelnummer"
@@ -1515,7 +1515,7 @@ de_DE:
   email_payment_summary: Zahlungsübersicht
   email_payment_method: "Bezahlen per:"
   email_so_placement_intro_html: "Sie haben eine neue Bestellung mit <strong> %{distributor} </ strong>"
-  email_so_placement_details_html: "Hier sind die Details Ihrer Bestellung für <strong> %{distributor} </ strong>:"
+  email_so_placement_details_html: "Hier sind die Details Ihrer Bestellung für <strong>%{distributor}</strong> :"
   email_so_placement_changes: "Leider waren nicht alle von Ihnen angeforderten Produkte verfügbar. Die von Ihnen angeforderten Originalmengen sind unten durchgestrichen."
   email_so_payment_success_intro_html: "Eine automatische Zahlung wurde für Ihre Bestellung von <strong> %{distributor} </ strong> verarbeitet."
   email_so_placement_explainer_html: "Diese Bestellung wurde automatisch für Sie erstellt."
@@ -1528,7 +1528,7 @@ de_DE:
   email_so_confirmation_details_html: "Hier finden Sie alles, was Sie über Ihre Bestellung wissen müssen: <strong> %{distributor} </ strong>:"
   email_so_empty_intro_html: "Wir haben versucht, eine neue Bestellung mit <strong> %{distributor} </ strong> zu platzieren, hatten aber einige Probleme ..."
   email_so_empty_explainer_html: "Leider war keines der von Ihnen bestellten Produkte verfügbar, daher wurde keine Bestellung aufgegeben. Die von Ihnen angeforderten Originalmengen sind unten durchgestrichen."
-  email_so_empty_details_html: "Hier sind die Details der nicht platzierten Reihenfolge für <strong> %{distributor} </ strong>:"
+  email_so_empty_details_html: "Hier sind die Details der nicht platzierten Bestellung für <strong>%{distributor}</strong> :"
   email_so_failed_payment_intro_html: "Wir haben versucht, eine Zahlung zu verarbeiten, hatten aber einige Probleme ..."
   email_so_failed_payment_explainer_html: "Die Zahlung für Ihr Abonnement mit <strong> %{distributor} </ strong> ist aufgrund eines Problems mit Ihrer Kreditkarte fehlgeschlagen. <strong> %{distributor} </ strong> wurde über diese fehlgeschlagene Zahlung benachrichtigt."
   email_so_failed_payment_details_html: "Hier sind die Details des vom Zahlungs-Gateway bereitgestellten Fehlers:"
@@ -1536,7 +1536,7 @@ de_DE:
   email_shipping_delivery_time: "Lieferung am:"
   email_shipping_delivery_address: "Lieferadresse:"
   email_shipping_collection_details: Sammlungsdetails
-  email_shipping_collection_time: "Bereit für die Sammlung:"
+  email_shipping_collection_time: "Bereit zur Abholung"
   email_shipping_collection_instructions: "Sammlung Anweisungen:"
   email_special_instructions: "Deine Noten:"
   email_signup_greeting: Hallo!
