--- a/config/locales/en_PH.yml
+++ b/config/locales/en_PH.yml
@@ -282,6 +282,7 @@ en_PH:
     edit: "Edit"
     update: "Update"
     delete: "Delete"
+    add: "Add"
   admin:
     begins_at: Begins At
     begins_on: Begins On
@@ -1540,7 +1541,8 @@ en_PH:
   hubs_distance: Closest to
   hubs_distance_filter: "Show me shops near %{location}"
   shop_changeable_orders_alert_html:
-    one: Your order with <a href='%{path}' target='_blank'>%{shop} / %{order}</a> is open for review. You can make changes until %{oc_close}.
+    few: You have <a href='%{path}' target='_blank'>%{count} orders with %{shop}</a> currently open for review. You can make changes until %{oc_close}.
+    many: You have <a href='%{path}' target='_blank'>%{count} orders with %{shop}</a> currently open for review. You can make changes until %{oc_close}.
     other: You have <a href='%{path}' target='_blank'>%{count} orders with %{shop}</a> currently open for review. You can make changes until %{oc_close}.
   orders_changeable_orders_alert_html: This order has been confirmed, but you can make changes until <strong>%{oc_close}</strong>.
   products_clear: Clear
@@ -1679,7 +1681,8 @@ en_PH:
   orders_could_not_cancel: "Sorry, the order could not be cancelled"
   orders_cannot_remove_the_final_item: "Cannot remove the final item from an order, please cancel the order instead."
   orders_bought_items_notice:
-    one: "An additional item is already confirmed for this order cycle"
+    few: "%{count} additional items already confirmed for this order cycle"
+    many: "%{count} additional items already confirmed for this order cycle"
     other: "%{count} additional items already confirmed for this order cycle"
   orders_bought_edit_button: Edit confirmed items
   orders_bought_already_confirmed: "* already confirmed"
@@ -2811,6 +2814,7 @@ en_PH:
     adjustments: "Adjustments"
     continue: "Continue"
     fill_in_customer_info: "Please fill in customer info"
+    credit_card: "Credit Card"
     new_payment: "New Payment"
     capture: "Capture"
     void: "Void"
@@ -2923,6 +2927,7 @@ en_PH:
     options: "Options"
     successfully_created: '%{resource} has been successfully created!'
     successfully_updated: '%{resource} has been successfully updated!'
+    payment_method: "Payment Method"
     payment_processing_failed: "Payment could not be processed, please check the details you entered"
     actions:
       update: "Update"
@@ -2962,7 +2967,6 @@ en_PH:
         index:
           inherits_properties_checkbox_hint: "Inherit properties from %{supplier}? (unless overridden above)"
           add_product_properties: "Add Product Properties"
-          select_from_prototype: "Select From Prototype"
       properties:
         index:
           properties: "Properties"
@@ -3055,6 +3059,8 @@ en_PH:
           active_products:
             zero: "You don't have any active products."
             one: "You have one active product"
+            few: "You have %{count} active products"
+            many: "You have %{count} active products"
             other: "You have %{count} active products"
         order_cycles:
           order_cycles: "Order Cycles"
@@ -3062,6 +3068,8 @@ en_PH:
           you_have_active:
             zero: "You don't have any active order cycles."
             one: "You have one active order cycle."
+            few: "You have %{count} active order cycles."
+            many: "You have %{count} active order cycles."
             other: "You have %{count} active order cycles."
           manage_order_cycles: "MANAGE ORDER CYCLES"
       shipping_methods:
