--- a/config/locales/es_CO.yml
+++ b/config/locales/es_CO.yml
@@ -288,6 +288,7 @@ es_CO:
     edit: "Editar"
     update: "Actualizar"
     delete: "Borrar"
+    add: "Añadir"
   admin:
     begins_at: Empieza en
     begins_on: Comienza en
@@ -1566,7 +1567,8 @@ es_CO:
   hubs_distance: Más cercano a
   hubs_distance_filter: "Muéstrame tiendas cerca de %{location}"
   shop_changeable_orders_alert_html:
-    one: Su pedido con <a href='%{path}' target='_blank'> %{shop} / %{order} </a> está abierto para revisión. Puede realizar cambios hasta %{oc_close}.
+    few: 'Usted tiene <a href=''%{path}'' target=''_blank''> %{count} pedidos con %{shop} </a> actualmente abiertos para revisión. Puede realizar cambios hasta %{oc_close}. '
+    many: 'Usted tiene <a href=''%{path}'' target=''_blank''> %{count} pedidos con %{shop} </a> actualmente abiertos para revisión. Puede realizar cambios hasta %{oc_close}. '
     other: 'Usted tiene <a href=''%{path}'' target=''_blank''> %{count} pedidos con %{shop} </a> actualmente abiertos para revisión. Puede realizar cambios hasta %{oc_close}. '
   orders_changeable_orders_alert_html: Este pedido ha sido confirmado, pero puede realizar cambios hasta <strong>%{oc_close}</strong>.
   products_clear: Limpiar
@@ -1712,7 +1714,8 @@ es_CO:
   orders_could_not_cancel: "Lo sentimos, no se pudo cancelar el pedido"
   orders_cannot_remove_the_final_item: "No se puede quitar el último artículo de un pedido, en su lugar, por favor cancele el pedido."
   orders_bought_items_notice:
-    one: "Un elemento adicional ya está confirmado para este ciclo de pedido"
+    few: "%{count} artículos adicionales ya confirmados para este ciclo de pedido"
+    many: "%{count} artículos adicionales ya confirmados para este ciclo de pedido"
     other: "%{count} artículos adicionales ya confirmados para este ciclo de pedido"
   orders_bought_edit_button: Editar artículos confirmados
   orders_bought_already_confirmed: "* ya confirmados"
@@ -2864,6 +2867,7 @@ es_CO:
     adjustments: "Ajustes"
     continue: "Continuar"
     fill_in_customer_info: "Por favor complete la información del cliente"
+    credit_card: "Tarjeta de crédito"
     new_payment: "Nuevo pago"
     capture: "Captura"
     void: "Vacío"
@@ -2982,14 +2986,12 @@ es_CO:
     options: "Opciones"
     successfully_created: '%{resource} se ha creado exitosamente!'
     successfully_updated: '%{resource} ha sido actualizado exitosamente!'
+    payment_method: "Método de pago"
     payment_processing_failed: "No se pudo procesar el pago, por favor verifique los detalles que introdujo"
     actions:
       update: "Actualizar"
     shared:
       error_messages:
-        errors_prohibited_this_record_from_being_saved:
-          one: "1 error prohibió que se guardara este registro:"
-          other: "Los errores %{count} impidieron que se guardara este registro:"
         there_were_problems_with_the_following_fields: "Hubo problemas con los siguientes campos"
       payments_list:
         date_time: "Fecha y hora"
@@ -3027,7 +3029,6 @@ es_CO:
         index:
           inherits_properties_checkbox_hint: "¿Heredar propiedades desde %{supplier}? (a menos que sea anulado arriba)"
           add_product_properties: "Agregar propiedades del producto"
-          select_from_prototype: "Seleccionar de prototipo"
       properties:
         index:
           properties: "Propiedades"
@@ -3120,6 +3121,8 @@ es_CO:
           active_products:
             zero: "No tienes ningún producto activo"
             one: "Tiene un producto activo."
+            few: "Tiene %{count} productos activos"
+            many: "Tiene %{count} productos activos"
             other: "Tiene %{count} productos activos"
         order_cycles:
           order_cycles: "Ciclos de Pedido"
@@ -3127,6 +3130,8 @@ es_CO:
           you_have_active:
             zero: "No tienes ningún ciclo de pedido activo."
             one: "Tienes un ciclo de pedido activo."
+            few: "Tienes %{count} ciclos de pedido activos."
+            many: "Tienes %{count} ciclos de pedido activos."
             other: "Tienes %{count} ciclos de pedido activos."
           manage_order_cycles: "GESTIONA LOS CICLOS DE PEDIDO"
       shipping_methods:
