--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -293,6 +293,7 @@ nb:
     edit: "Rediger"
     update: "Oppdater"
     delete: "Slett"
+    add: "Legg til"
   admin:
     begins_at: Begynner på
     begins_on: Begynner på
@@ -1577,7 +1578,8 @@ nb:
   hubs_distance: Nærmest
   hubs_distance_filter: "Vis meg butikker nær %{location}"
   shop_changeable_orders_alert_html:
-    one: Din bestilling med <a href='%{path}' target='_blank'> %{shop} / %{order} </a> er åpen for vurdering. Du kan gjøre endringer til %{oc_close}.
+    few: Du har <a href='%{path}' target='_blank'> %{count} bestillinger med %{shop} </a> for øyeblikket åpen for gjennomgang. Du kan gjøre endringer til %{oc_close}.
+    many: Du har <a href='%{path}' target='_blank'> %{count} bestillinger med %{shop} </a> for øyeblikket åpen for gjennomgang. Du kan gjøre endringer til %{oc_close}.
     other: Du har <a href='%{path}' target='_blank'> %{count} bestillinger med %{shop} </a> for øyeblikket åpen for gjennomgang. Du kan gjøre endringer til %{oc_close}.
   orders_changeable_orders_alert_html: Denne bestillingen er bekreftet, men du kan gjøre endringer til <strong>%{oc_close}</strong>.
   products_clear: Fjern
@@ -1723,7 +1725,8 @@ nb:
   orders_could_not_cancel: "Beklager, bestillingen kunne ikke avbrytes"
   orders_cannot_remove_the_final_item: "Kan ikke fjerne den siste varen fra en bestilling, vennligst avbryt bestillingen i stedet."
   orders_bought_items_notice:
-    one: "Et ekstra element er allerede bekreftet for denne bestillingsperioden"
+    few: "Ytterligere%{count} varer er allerede bekreftet for denne bestillingsrunden"
+    many: "Ytterligere%{count} varer er allerede bekreftet for denne bestillingsrunden"
     other: "Ytterligere%{count} varer er allerede bekreftet for denne bestillingsrunden"
   orders_bought_edit_button: Rediger bekreftede varer
   orders_bought_already_confirmed: "* allerede bekreftet"
@@ -2873,6 +2876,7 @@ nb:
     adjustments: "Justeringer"
     continue: "Fortsett"
     fill_in_customer_info: "Vennligst fyll inn kundeinformasjon"
+    credit_card: "Kredittkort"
     new_payment: "Ny betaling"
     capture: "Fang"
     void: "Ugyldig"
@@ -2993,6 +2997,7 @@ nb:
     has_no_shipped_units: "har ingen sendte enheter"
     successfully_created: 'Opprettelsen av %{resource} var vellykket!'
     successfully_updated: 'Oppdatering av%{resource} var vellykket!'
+    payment_method: "Betalingsmetode"
     payment_processing_failed: "Betalingen kunne ikke behandles, vennligst sjekk detaljene du skrev inn"
     not_available: "Ikke relevant"
     order_populator:
@@ -3002,7 +3007,8 @@ nb:
     shared:
       error_messages:
         errors_prohibited_this_record_from_being_saved:
-          one: "1 feil forbød å lagre denne posten:"
+          few: "%{count} feil forbød at denne posten ble lagret:"
+          many: "%{count} feil forbød at denne posten ble lagret:"
           other: "%{count} feil forbød at denne posten ble lagret:"
         there_were_problems_with_the_following_fields: "Det var problemer med følgende felt"
       payments_list:
@@ -3041,7 +3047,6 @@ nb:
         index:
           inherits_properties_checkbox_hint: "Arve egenskaper fra %{supplier}? (med mindre overstyrt over)"
           add_product_properties: "Legg til Produktegenskaper"
-          select_from_prototype: "Velg Fra Prototyp"
       properties:
         index:
           properties: "Egenskaper"
@@ -3134,6 +3139,8 @@ nb:
           active_products:
             zero: "Du har ingen aktive produkter."
             one: "Du har ett aktivt produkt"
+            few: "Du har %{count} aktive produkter"
+            many: "Du har %{count} aktive produkter"
             other: "Du har %{count} aktive produkter"
         order_cycles:
           order_cycles: "Bestillingsrunder"
@@ -3141,6 +3148,8 @@ nb:
           you_have_active:
             zero: "Du har ingen aktive bestillingsrunder"
             one: "Du har en aktiv bestillingsrunde"
+            few: "Du har %{count} aktive bestillingssykluser."
+            many: "Du har %{count} aktive bestillingssykluser."
             other: "Du har %{count} aktive bestillingssykluser."
           manage_order_cycles: "BEHANDLE BESTILLINGSRUNDER"
       shipping_methods:
