--- a/config/locales/pt_BR.yml
+++ b/config/locales/pt_BR.yml
@@ -293,6 +293,7 @@ pt_BR:
     edit: "Editar"
     update: "Atualizar"
     delete: "Deletar"
+    add: "Adicionar"
   admin:
     begins_at: Começa em
     begins_on: Começa em
@@ -2900,6 +2901,7 @@ pt_BR:
     adjustments: "Ajustes"
     continue: "Continuar"
     fill_in_customer_info: "Por favor, preencha as informações do cliente"
+    credit_card: "Cartão de Crédito"
     new_payment: "Novo Pagamento"
     capture: "Capturar"
     void: "Apagar"
@@ -3020,6 +3022,7 @@ pt_BR:
     has_no_shipped_units: "não tem itens enviados"
     successfully_created: '%{resource}foi criado com sucesso!'
     successfully_updated: '%{resource}foi atualizado com sucesso!'
+    payment_method: "Método de Pagamento"
     payment_processing_failed: "O pagamento não pôde ser processado, favor verificar os dados informados. "
     not_available: "N/A"
     order_populator:
@@ -3070,7 +3073,6 @@ pt_BR:
         index:
           inherits_properties_checkbox_hint: "Herdar propriedades de %{supplier}? (a menos que substituído acima)"
           add_product_properties: "Adicionar Propriedades do Produtos"
-          select_from_prototype: "Selecionar do Protótipo"
       properties:
         index:
           properties: "Propriedades"
