--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -294,6 +294,7 @@ ru:
     edit: "Изменить"
     update: "Обновить"
     delete: "Удалить"
+    add: "Добавить"
   admin:
     begins_at: Начинается С
     begins_on: Начинается На
@@ -2953,6 +2954,7 @@ ru:
     adjustments: "Корректировки"
     continue: "Продолжить"
     fill_in_customer_info: "Пожалуйста заполните информацию о кленте"
+    credit_card: "Кредитная Карта"
     new_payment: "Новый Платёж"
     capture: "Capture"
     void: "Void"
@@ -3073,6 +3075,7 @@ ru:
     has_no_shipped_units: "не имеет отгруженных единиц"
     successfully_created: '%{resource} был успешно создан!'
     successfully_updated: '%{resource} был успешно обновлён!'
+    payment_method: "Способ Оплаты"
     payment_processing_failed: "Платеж не может быть обработан, пожалуйста, проверьте введенные данные"
     not_available: "Нет данных"
     order_populator:
@@ -3123,7 +3126,6 @@ ru:
         index:
           inherits_properties_checkbox_hint: "Наследовать свойства от %{supplier}? (если не отменено выше)"
           add_product_properties: "Добавить Свойства Товара"
-          select_from_prototype: "Выбрать Из Прототипа"
       properties:
         index:
           properties: "Свойства"
